# simple-gui-lib

./: .gitignore  CMakeLists.txt  README.md
include/Application/: Application.hpp  ColorSheme.hpp  MainPanel.hpp
include/Application/Commands/: Commands.hpp
include/Application/Events/: ApplicationEvent.hpp
include/Application/Panels/: Editor.hpp  EditorPanel.hpp  MainPanel.hpp  Palette.hpp  PreferencesPanels.hpp  ToolPanel.hpp
include/Application/Plugins/: API.hpp  Plugin.hpp  PluginFilter.hpp  PluginManager.hpp  PluginTool.hpp  TextureFactory.hpp  WidgetFactory.hpp
include/Application/Tools/: IFilter.hpp  ITool.hpp  ToolManager.hpp  Tools.hpp
include/Application/UI/: Canvas.hpp  Editor.hpp  ToolBar.hpp
include/Core/Application/: Application.hpp
include/Core/EventManager/: Event.hpp  EventCallback.hpp  EventDispatcher.hpp  EventHandler.hpp  EventManager.hpp  IEventListener.hpp
include/Core/EventSystem/: EventDispatcher.hpp  EventManager.hpp  IEvent.hpp  IEventListener.hpp
include/Core/Functor/: FunctionWrap.hpp  IWrap.hpp  MethodWrap.hpp
include/Core/LogManager/: LogManager.hpp
include/Core/Math/: Rect2.hpp  Vector2.hpp  Vector3.hpp
include/Core/Platform/: Color.hpp  Font.hpp  IRenderTarget.hpp  Image.hpp  Input.hpp  InputEvent.hpp  NativePlatform.hpp  Rectangle.hpp  RenderTexture.hpp  RenderWindow.hpp  Renderer.hpp  Text.hpp  Texture.hpp
include/Core/ResourceManager/: ResourceManager.hpp  Resources.hpp
include/Core/Signal/: FunctionWrap.hpp  IFunctor.hpp  MethodWrap.hpp  Signal.hpp  Slot.hpp
include/Core/Templates/: List.hpp
include/Editor/: ColorSheme.hpp  Editor.hpp  MainPanel.hpp
include/EventSystem/: EventDispatcher.hpp  IEvent.hpp  IEventListener.hpp
include/GUI/: ColorSheme.hpp  Config.hpp
include/GUI/Commands/: CommandQueue.hpp  Commands.hpp  ICommand.hpp
include/GUI/Event/: InputEvent.hpp  InputEventMask.hpp  KeyEvent.hpp  MouseEvent.hpp  WidgetEvent.hpp
include/GUI/Events/: WidgetEvent.hpp  WidgetEventDispatcher.hpp
include/GUI/Handler/: ButtonHandler.hpp  Handler.hpp
include/GUI/Signal/: Signal.hpp  Slot.hpp  Wrap.hpp
include/GUI/Style/: FilledStyle.hpp  IStyle.hpp
include/GUI/Styles/: BorderedStyle.hpp  ButtonStyle.hpp  DefaultFilledStyleColors.hpp  DefaultStyle.hpp  FilledStyle.hpp  IStyle.hpp  SliderStyle.hpp  Style.hpp
include/GUI/WidgetManager/: MainWidget.hpp  WidgetManager.hpp
include/GUI/Widgets/: Button.hpp  ButtonBase.hpp  CompositeWidget.hpp  ContainerWidget.hpp  Desktop.hpp  Frame.hpp  Icon.hpp  Image.hpp  ImageVeiw.hpp  ImageWidget.hpp  Label.hpp  LayeredWidget.hpp  List.hpp  MenuBar.hpp  RectWidget.hpp  ScrollBar.hpp  Slider.hpp  TabBar.hpp  TextVeiw.hpp  TextWidget.hpp  Title.hpp  TitleBar.hpp  Widget.hpp  Window.hpp
include/Math/: Vector2.hpp
include/Platform/: Color.hpp  Font.hpp  IRenderTarget.hpp  Input.hpp  Platform.hpp  Rect.hpp  Renderer.hpp  SFMLPlatform.hpp  Sprite.hpp  Text.hpp  Texture.hpp  Window.hpp
include/Platform/Input/: Input.hpp  KeyboardEvent.hpp  MouseEvent.hpp  QuitEvent.hpp
include/Platform/Render/: Renderer.hpp  Texture.hpp  Window.hpp
plugins/Blur/: Blur.cpp
plugins/Median/: Median.cpp
plugins/Square/: Plugin.hpp  SquarePlugin.cpp
plugins/Star/: Plugin.hpp  Star.cpp
src/: main.cpp
src/Application/: Application.cpp  CMakeLists.txt  MainPanel.cpp
src/Application/Commands/: CMakeLists.txt  Commands.cpp
src/Application/Events/: ApplicationEvent.cpp  CMakeLists.txt
src/Application/Panels/: CMakeLists.txt  Editor.cpp  EditorPanel.cpp  MainPanel.cpp  Palette.cpp  PreferencesPanels.cpp  ToolPanel.cpp
src/Application/Plugins/: API.cpp  CMakeLists.txt  PluginFilter.cpp  PluginManager.cpp  PluginTool.cpp  TextureFactory.cpp  WidgetFactory.cpp
src/Application/Tools/: CMakeLists.txt  ToolManager.cpp  Tools.cpp
src/Application/UI/: CMakeLists.txt  Canvas.cpp  Editor.cpp  ToolBar.cpp
src/Core/: CMakeLists.txt
src/Core/Application/: Application.cpp  CMakeLists.txt
src/Core/EventManager/: CMakeLists.txt  Event.cpp  EventDispatcher.cpp  EventManager.cpp
src/Core/EventSystem/: CMakeLists.txt  EventDispatcher.cpp  EventManager.cpp
src/Core/LogManager/: CMakeLists.txt  LogManager.cpp
src/Core/Math/: CMakeLists.txt  Rect2.cpp  Vector2.cpp  Vector3.cpp
src/Core/Platform/: CMakeLists.txt  Color.cpp  Font.cpp  Image.cpp  Input.cpp  InputEvent.cpp  Rectangle.cpp  RenderTexture.cpp  RenderWindow.cpp  Renderer.cpp  Text.cpp  Texture.cpp
src/Core/Platfrom/: CMakeLists.txt  Color.cpp  Image.cpp  Input.cpp  Rectangle.cpp  RenderTexture.cpp  RenderWindow.cpp  Text.cpp
src/Core/ResourceManager/: CMakeLists.txt  ResourceManager.cpp
src/Editor/: CMakeLists.txt  Editor.cpp  MainPanel.cpp
src/EventSystem/: CMakeLists.txt  EventDispatcher.cpp
src/GUI/: CMakeLists.txt
src/GUI/Commands/: CMakeLists.txt  CommandQueue.cpp  Commands.cpp
src/GUI/Event/: CMakeLists.txt  GUIEvent.cpp  InputEvent.cpp  KeyEvent.cpp  MouseEvent.cpp  WidgetEvent.cpp
src/GUI/Events/: CMakeLists.txt  WidgetEvent.cpp  WidgetEventDispatcher.cpp
src/GUI/Handler/: ButtonHandler.cpp  CMakeLists.txt  Handler.cpp
src/GUI/Style/: CMakeLists.txt  FilledStyle.cpp
src/GUI/Styles/: ButtonStyle.cpp  CMakeLists.txt  DefaultStyle.cpp  FilledStyle.cpp  SliderStyle.cpp
src/GUI/WidgetManager/: CMakeLists.txt  WidgetManager.cpp
src/GUI/Widgets/: Button.cpp  ButtonBase.cpp  CMakeLists.txt  CompositeWidget.cpp  ContainerWidget.cpp  Icon.cpp  Image.cpp  ImageVeiw.cpp  ImageWidget.cpp  Label.cpp  LayeredWidget.cpp  List.cpp  MenuBar.cpp  RectWidget.cpp  ScrollBar.cpp  Slider.cpp  TabBar.cpp  TextVeiw.cpp  TextWidget.cpp  Title.cpp  TitleBar.cpp  Widget.cpp  Window.cpp
src/Math/: CMakeLists.txt  Vector2.cpp  Vector3.cpp
src/Platform/: CMakeLists.txt  Color.cpp  Font.cpp  Input.cpp  Renderer.cpp  Sprite.cpp  Text.cpp  Texture.cpp  Window.cpp
src/Platform/Input/: Input.cpp  KeyboardEvent.cpp  MouseEvent.cpp  QuitEvent.cpp
src/Platform/Render/: Renderer.cpp  Window.cpp
